# estudantes_crud

backend/: app.py  config.py  pyproject.toml
backend/model/: Estudante.py
templates/: index.html
